# SkyData

./: .gitignore  CMakeLists.txt  README.md  REPORT.md  conf1.txt  db_config.txt
.github/workflows/: ci.yml
UML/: Server.drawio  UML_WWH.drawio
linters/: run.sh
project/: CMakeLists.txt  main.cpp
project/Example/Backend/: CMakeLists.txt  main.cpp
project/Example/Client/: CMakeLists.txt  main.cpp
project/Example/Client_To_Storage/: CMakeLists.txt  main.cpp
project/Example/Middle/: CMakeLists.txt  main.cpp
project/Example/Storage/: CMakeLists.txt  main.cpp
project/async_server/: abstract_server.h
project/async_server/backend_server/: backend_server.h
project/async_server/middle_end/: middle_end.cpp  middle_end.h
project/client/: CMakeLists.txt  README.md  main.cpp
project/client/commander/include/: ClientCommand.h  ClientSocked.h  CloudStoragePopCommand.h  CloudStoragePushCommand.h  PopCommand.h  PushCommand.h
project/client/commander/src/: ClientSocked.cpp  CloudStoragePopCommand.cpp  CloudStoragePushCommand.cpp  PopCommand.cpp  PushCommand.cpp
project/client/indexer/include/: ClientSender.h  Client_Sender.h  CloudStorageWorker.h  Cloud_Storage_Worker.h  InternalDataBaseWorker.h  Internal_Data_Base_Worker.h
project/client/indexer/src/: ClientSender.cpp  Client_Sender.cpp  CloudStorageWorker.cpp  Cloud_Storage_Worker.cpp  InternalDataBaseWorker.cpp  Internal_Data_Base_Worker.cpp
project/client/observer/include/: Cloud_Storage_Downloader.h  Downloader.h  EventEditor.h  EventListen.h  LocalListener.h  Local_Listener.h  MessageListener.h  MessageUpdater.h  Message_Listener.h  Message_Updater.h  Observer.h
project/client/observer/src/: Cloud_Storage_Downloader.cpp  Downloader.cpp  EventEditor.cpp  EventListen.cpp  LocalListener.cpp  Local_Listener.cpp  MessageListener.cpp  MessageUpdater.cpp  Message_Listener.cpp  Message_Updater.cpp  Observer.cpp
project/client/widgets/: MainWidget.cpp  MainWidget.h
project/common/: Message.cpp  Message.h  MessageStorage.h  Socket.cpp  Socket.h
project/connection/: abstract_connection.h
project/connection/clients_connection/: clients_connection.cpp  clients_connection.h
project/connection/server_connection/: server_connection.cpp  server_connection.h
project/connection/to_backend_connection/: to_backend_connection.cpp  to_backend_connection.h
project/data_bases/Cloud_Storage/include/: CloudStorage.h  CloudStorageAPI.h  CloudStorageDB.h  Cloud_Storage.h  Cloud_Storage_DB.h
project/data_bases/Cloud_Storage/src/: CloudStorageAPI.cpp  CloudStorageDB.cpp  Cloud_Storage_DB.cpp
project/data_bases/InternalDB/include/: InternalDataBase.h  SQLite.h
project/data_bases/InternalDB/src/: SQLite.cpp
project/data_bases/Internal_DB/include/: InternalDataBase.h  Internal_Data_Base.h  PostgressInternalDB.h  Postgress_Internal_DB.h  SQLite.h
project/data_bases/Internal_DB/src/: PostgressInternalDB.cpp  Postgress_Internal_DB.cpp  SQLite.cpp
project/data_bases/MetadataDB/include/: DataBase.h  PostgressDB.h
project/data_bases/MetadataDB/src/: PostgressDB.cpp
project/data_bases/Metadata_DB/include/: DataBase.h  Data_Base.h  PostgressDB.h  Postgress_DB.h
project/data_bases/Metadata_DB/src/: PostgressDB.cpp  Postgress_DB.cpp
project/liblistener/: CMakeLists.txt
project/liblistener/include/: Listener.h
project/liblistener/src/: Listener.cpp  utils.cpp
project/libserver/: CMakeLists.txt
project/libserver/async_server/include/: AbstractServer.h  BackendServer.h  MiddleEnd.h  StorageServer.h
project/libserver/async_server/src/: BackendServer.cpp  MiddleEnd.cpp  StorageServer.cpp
project/libserver/connection/include/: AbstractConnection.h  ClientToStorageConnection.h  ClientsConnection.h  ServerConnection.h  ToBackendConnection.h
project/libserver/connection/src/: ClientToStorageConnection.cpp  ClientsConnection.cpp  ServerConnection.cpp  ToBackendConnection.cpp
project/libserver/include/: Connection.h  Event.h  EventLoop.h  Master.h  Worker.h
project/libserver/src/: Connection.cpp  EventLoop.cpp  Master.cpp  Worker.cpp
project/messages/: Message.h  messages.h
project/queue_server/: CMakeLists.txt  main.cpp
project/queue_server/include/: OnDiskSaverQueue.h  Queue.h  QueueAPI.h  QueueManager.h  QueueWorker.h  StdQueue.h
project/queue_server/src/: OnDiskSaverQueue.cpp  Queue.cpp  QueueAPI.cpp  QueueManager.cpp  QueueWorker.cpp  StdQueue.cpp
project/server/: abstract_server.h
project/server/backend_server/: backend_server.cpp  backend_server.h
project/server/middle_end/: middle_end.cpp  middle_end.h
project/storage/: CMakeLists.txt  main.cpp
project/synchronization_service/: CMakeLists.txt
project/synchronization_service/include/: DataBaseWorker.h  SyncServiceAPI.h  Sync_Service.h
project/synchronization_service/src/: DataBaseWorker.cpp  SyncServiceAPI.cpp  Sync_Service.cpp  main.cpp
tests/: CMakeLists.txt
tests/client/: CMakeLists.txt  tests.cpp
tests/client/indexer/: CMakeLists.txt
tests/client/indexer/include/: TestCloudStorageWorker.h  TestInternalDataBase.h  utils.h
tests/client/indexer/src/: TestClientSender.cpp  TestCloudStorageWorker.cpp  TestInternalDataBaseWorker.cpp  main.cpp  test_client_sender.cpp  test_cloud_storage_worker.cpp  test_internal_data_base_worker.cpp  utils.cpp
tests/client/observer/: CMakeLists.txt  Message.h  tests_observer.cpp  utils.cpp  utils.h
tests/queue_server/: CMakeLists.txt  main.cpp
tests/queue_server/include/: event_loop_mock.h  master_mock.h  queue_api_mock.h  queue_mock.h
tests/queue_server/src/: ManagerTests.cpp  QueueTests.cpp  master_test.cpp  queue_api_tests.cpp  queue_manager_tests.cpp  queue_tests.cpp
tests/sync_service/: CMakeLists.txt  metadata_db_test.cpp  sync_service_test.cpp
